--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "10.2.1",
-    "expo": "39.0.3",
+    "@apollo/react-hooks": "^4.0.0",
+    "@expo/vector-icons": "^12.0.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
+    "expo": "^41.0.0",
     "expo-cli": "^5.0.3",
-    "graphql": "14.5.8",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.12.6",
     "jwt-decode": "2.2.0",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "1.7.0",
-    "react-native-reanimated": "1.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
     "react-native-vector-icons": "6.6.0",
-    "react-native-web": "0.13.18",
+    "react-native-web": "~0.13.12",
     "react-navigation": "4.0.10",
     "react-navigation-drawer": "2.3.3",
     "react-navigation-stack": "1.10.3",
